RESOLVED FIXED235562
Constructing untaken LOG(Category, ...) arguments slow debug binaries down
https://bugs.webkit.org/show_bug.cgi?id=235562
Summary Constructing untaken LOG(Category, ...) arguments slow debug binaries down
Kimmo Kinnunen
Reported 2022-01-25 02:06:11 PST
Constructing untaken LOG(Category, ...) arguments slow debug binaries down Leads to case-by-case hacking around the problem, which leads to bugs (Why is this LOG(IPCMessages,..) not printed? Should be consistent with RELEASE_LOG(Category, ...)
Attachments
Patch (3.26 KB, patch)
2022-01-25 02:18 PST, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2022-01-25 02:18:10 PST
Radar WebKit Bug Importer
Comment 2 2022-02-01 02:07:15 PST
EWS
Comment 3 2022-02-15 22:54:37 PST
Committed r289879 (247317@main): <https://commits.webkit.org/247317@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449905 [details].
Note You need to log in before you can comment on or make changes to this bug.