Constructing untaken LOG(Channel, ...) arguments slow debug binaries down https://bugs.webkit.org/show_bug.cgi?id=235562

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-02-15
Reviewed by Simon Fraser.

Speed up debug build binary LOG(Channel, ...) by checking the
channel (and level) before constructing the log arguments.
This is consistent with how RELEASE_LOG() works.

If the arguments are slow to create, call sites end up implementing
this at the call site and risk subtle bugs which make existing logging unreliable.

Fixes a bug with LOG_WITH_STREAM where ChannelState::OnWithAccumulation channels would not log.

* wtf/Assertions.h:


Canonical link: https://commits.webkit.org/247317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289879 268f45cc-cd09-0410-ab3c-d52691b4dbfc